--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
         <activity
             android:windowSoftInputMode="adjustResize"
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.mainactivity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GlazovNetApp">
