--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:name=".core.presentation.mainactivity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:launchMode="standard"
             android:theme="@style/Theme.GlazovNetApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
