--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:launchMode="standard"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.GlazovNetApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
